--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "test": "jest --passWithNoTests"
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   }
 }
