--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
+    "prettier": "^3.4.2",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "currency.js": "^2.0.4"
   }
 }
