--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node ./dist/index.js",
-    "test": "jest"
+    "test": "jest",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
