--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/node-fetch": "2",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "currency.js": "^2.0.4"
+    "@hapi/hapi": "^21.3.12",
+    "axios": "^1.7.9",
+    "currency.js": "^2.0.4",
+    "express": "^4.21.2",
+    "node-fetch": "2"
   }
 }
