--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.9",
     "currency.js": "^2.0.4",
     "express": "^4.21.2",
-    "node-fetch": "2"
+    "node-fetch": "2",
+    "pg-promise": "^11.10.2"
   }
 }
